# Friendchair-DIY

./: ReadME.md  diy-anleitung.md  index.html  styles.css
friendchair/: CMakeLists.txt  platformio.ini
friendchair/include/input/: StateButton.h
friendchair/include/network/: NetworkManager.h
friendchair/include/output/: OutputManager.h
friendchair/include/sensor/: PressureSensor.h
friendchair/include/state/: ChairState.h
friendchair/include/tasks/: TaskManager.h
friendchair/src/: main.cpp
friendchair/src/input/: StateButton.cpp
friendchair/src/network/: NetworkManager.cpp
friendchair/src/output/: OutputManager.cpp
friendchair/src/sensor/: PressureSensor.cpp
friendchair/src/state/: ChairState.cpp
friendchair/src/tasks/: TaskManager.cpp
public/: index.html
websitecode/: index.html  script.js  style.css
